# rental-manager

./: .gitignore  README.md  RentalManager.wsgi  pyproject.toml  requirements.txt  setup.py
Mietvereinbarung/: Euro.txt  Footer.txt
RentalManager/: __init__.py  __main__.py  main.py
RentalManager/website/: __init__.py  auth.py  bookings.py  guests.py  homepage.py
RentalManager/website/database/: __init__.py  db_service.py  models.py
RentalManager/website/templates/: add_guest.html  base.html  booking.html  booking_details.html  booking_overview.html  create_booking.html  guest_details.html  guest_profile.html  guest_properties.html  home.html  login.html  sign_up.html
RentalManager/website/util/: pdf_creator.py
rental_manager/: __init__.py  __main__.py  config.py  main.py  rental_manager.py  requirements.txt
rental_manager/Mietvereinbarung/: Euro.txt  Footer.txt  Header_Angela.txt  Header_Gast.txt  Info.txt
rental_manager/app/: __init__.py
rental_manager/app/database/: db_service.py  models.py
rental_manager/app/main/: auth.py  bookings.py  guests.py  homepage.py
rental_manager/app/templates/: booking_details.html  booking_form.html  booking_overview.html  guest_form.html  guest_overview.html  login.html
rental_manager/app/utils/: pdf_creator.py
rental_manager/util/: pdf_creator.py
rental_manager/website/: __init__.py  auth.py  bookings.py  database.db  guests.py  homepage.py
rental_manager/website/database/: __init__.py  database.db  db_service.py  models.py
rental_manager/website/templates/: booking_overview.html  create_booking.html  (+3 more)
(+4 files in other folders)
